Added icon for sound on and off. #25

--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,10 @@
   font-family: "Bangers", cursive;
   font-size: 20px;
 }
+
+#sound {
+  position: absolute;
+  left: 490px;
+  top: 22px;
+  height: 18px;
+}
