Created screen that allows user to enter name. #27

--- a/public/styles.css
+++ b/public/styles.css
@@ -17,3 +17,16 @@
 .hidden {
   display: none;
 }
+
+#send-score {
+  position: absolute;
+  top: 244px;
+  left: 270px;
+}
+
+#username {
+  width: 65px;
+  height: 15px;
+  background-color: rgba(0, 0, 0, 0);
+  border-style: none;
+}
